test/corpus/definitions.txt
===
Item
===

module Item {
  item Pepper {
    DisplayName = Camping,
  }
}

---

(module (identifier)
  (item (identifier)
    (item_attribute
      (identifier)
      (item_attribute_text))))

===
Item Multiple Attributes
===

module Item {
  item Pepper {
    Type        = Normal,
    DisplayName = Camping,
  }
}

---

(module (identifier)
  (item (identifier)
    (item_attribute
      (identifier)
      (item_attribute_text))
    (item_attribute
      (identifier)
      (item_attribute_text))))

============
Basic Recipe
============

module Umbrella {
  recipe Close Umbrella
  {
    UmbrellaWhite,

    Result:ClosedUmbrellaWhite,
    Time:10.0,
  }
}

---

(module (identifier)
  (recipe (name)
    (recipe_requirements (recipe_requirement_simple (identifier)))
    (recipe_attributes
      (recipe_attribute (identifier) (identifier))
      (recipe_attribute (identifier) (number)))))

=======
Recipe With Alt Ingredients
=======

module Rec
{
  recipe Smash Bottle
  {
    WineEmpty/WineEmpty2,

    Result:SmashedBottle,
    Time:20,
    Sound:BreakGlassItem,
  }
}

---

(module (identifier)
  (recipe (name)
    (recipe_requirements
      (recipe_requirement_choice
        (identifier)
        (identifier)))
    (recipe_attributes
      (recipe_attribute (identifier) (identifier))
      (recipe_attribute (identifier) (number))
      (recipe_attribute (identifier) (identifier)))))

=======================
Multiple Items
=======================

module Food {
  item Pepper {
    Type = Normal,
  }
  item Salt {
    Type = Normal,
  }
}

---

(module (identifier)
  (item (identifier)
    (item_attribute (identifier) (item_attribute_text)))
  (item (identifier)
    (item_attribute (identifier) (item_attribute_text))))

=======================
Multiple Recipes
=======================

module Rec
{
  recipe Close Umbrella
  {
    UmbrellaWhite,

    Result:ClosedUmbrellaWhite,
    Time:10.0,
  }

  recipe Smash Bottle
  {
    WineEmpty,

    Result:SmashedBottle,
    Time:20,
  }
}

---

(module (identifier)
  (recipe (name)
    (recipe_requirements (recipe_requirement_simple (identifier)))
    (recipe_attributes
      (recipe_attribute (identifier) (identifier))
      (recipe_attribute (identifier) (number))))
  (recipe (name)
    (recipe_requirements (recipe_requirement_simple (identifier)))
    (recipe_attributes
      (recipe_attribute (identifier) (identifier))
      (recipe_attribute (identifier) (number)))))

=======================
Mixed Item And Recipe
=======================

module Mixed {
  item Pepper {
    Type = Normal,
  }

  recipe Close Umbrella
  {
    UmbrellaWhite,

    Result:ClosedUmbrellaWhite,
    Time:10.0,
  }
}

---

(module (identifier)
  (item (identifier)
    (item_attribute (identifier) (item_attribute_text)))
  (recipe (name)
    (recipe_requirements (recipe_requirement_simple (identifier)))
    (recipe_attributes
      (recipe_attribute (identifier) (identifier))
      (recipe_attribute (identifier) (number)))))

=======================
Imports With Multiple Definitions
=======================

module Food {
  imports {
    Base
  }

  item Pepper {
    Type = Normal,
  }
  item Salt {
    Type = Normal,
  }
}

---

(module (identifier)
  (imports (identifier))
  (item (identifier)
    (item_attribute (identifier) (item_attribute_text)))
  (item (identifier)
    (item_attribute (identifier) (item_attribute_text))))

=======================
Recipe Before Item
=======================

module Mixed {
  recipe Close Umbrella
  {
    UmbrellaWhite,

    Result:ClosedUmbrellaWhite,
    Time:10.0,
  }

  item Pepper {
    Type = Normal,
  }
}

---

(module (identifier)
  (recipe (name)
    (recipe_requirements (recipe_requirement_simple (identifier)))
    (recipe_attributes
      (recipe_attribute (identifier) (identifier))
      (recipe_attribute (identifier) (number))))
  (item (identifier)
    (item_attribute (identifier) (item_attribute_text))))
