test/corpus/imports.txt
============
No Imports Section
============

module test {
}

---

(module (identifier))

============
No Imports
============

module test {
 imports
 {
 }
}

---

(module (identifier)
  (imports))

============
One Import
============

module test {
 imports
 {
  Base
 }
}

---

(module (identifier)
  (imports (identifier)))

============
Multiple Imports
============

module test {
 imports
 {
  Base, Second
 }
}

---

(module (identifier)
  (imports (identifier) (identifier)))
